Fix factory item spacing

--- a/assets/scss/home/_factory.scss
+++ b/assets/scss/home/_factory.scss
@@ -45,6 +45,7 @@
   }
 
   &__media {
+    margin: 0;
     position: relative;
     overflow: hidden;
     border-radius: var(--radius);
